--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -7,8 +7,8 @@ package:
 
 source:
   fn: python-{{ name }}-{{ version }}.tar.gz
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  md5: 2773e90c8039c06258821006264dd32f
+  url: https://github.com/NeuralEnsemble/python-neo/archive/{{ version }}.tar.gz
+  sha256: 42473117017e757ea21804c1ff51187ed58de7487997af15c7d03ed8231847d2
 
 build:
   number: 0
