--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,7 +8,7 @@ package:
 source:
   fn: python-{{ name }}-{{ version }}.tar.gz
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  md5: 5e1938d0951604b67c32b7f32eff19bd
+  sha256: b711d871d25cc97651d445d5bf6d06a1a74b121bc28ea623e2538b6fbd2a7d1f
 
 build:
   number: 0
