Require setuptools at runtime
As the library uses `pkg_resources`, it requires `setuptools` at run
time to provide this. So add `setuptools` as a runtime requirement.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,6 +23,8 @@ requirements:
 
   run:
     - python
+    # Needed for pkg_resources
+    - setuptools
     - numpy >=1.3.0
     - quantities >=0.9.0
 
