--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,7 +21,7 @@ requirements:
     - pip
 
   run:
-    - python
+    - python >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
     # Needed for pkg_resources
     - setuptools
     - numpy >=1.10.0,!=1.16.0
