--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,10 +21,10 @@ requirements:
     - pip
 
   run:
-    - python >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
+    - python >=3.6
     # Needed for pkg_resources
     - setuptools
-    - numpy >=1.10.0,!=1.16.0
+    - numpy >=1.13.0,!=1.16.0
     - quantities >=0.12.1
 
 test:
@@ -40,7 +40,7 @@ test:
 
 about:
   home: http://neuralensemble.org/neo
-  license: BSD 3-Clause
+  license: BSD-3-Clause
   license_file: LICENSE.txt
   summary: A Python package for representing and reading electrophysiology data.
   doc_url: https://neo.readthedocs.io/
