--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,10 +21,10 @@ requirements:
     - pip
 
   run:
-    - python >=3.6
+    - python >=3.7
     # Needed for pkg_resources
     - setuptools
-    - numpy >=1.13.0,!=1.16.0
+    - numpy >=1.16.1
     - quantities >=0.12.1
 
 test:
