--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,14 +19,15 @@ requirements:
   host:
     - python
     - pip
+    - setuptools  # build backend
 
   run:
     - python >=3.8
     # Needed for pkg_resources
     - setuptools
     - packaging
-    - numpy >=1.19.5
-    - quantities >=0.14.1
+    - numpy >=1.19.5,<2.0.0
+    - quantities >=0.14.1,<0.16.0
 
 test:
   imports:
