--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,8 +26,8 @@ requirements:
     # Needed for pkg_resources
     - setuptools
     - packaging
-    - numpy >=1.19.5,<2.0.0
-    - quantities >=0.14.1,<0.16.0
+    - numpy >=1.22.4,<2.0.0
+    - quantities >=0.16.1
 
 test:
   imports:
