--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,7 +26,7 @@ requirements:
     # Needed for pkg_resources
     - setuptools
     - packaging
-    - numpy >=1.22.4,<2.0.0
+    - numpy >=1.22.4
     - quantities >=0.16.1
 
 test:
